# easy_soundcloud_download

./: README.md  pyproject.toml
src/: app.py  download_controller.py  download_item.py  download_service.py  enums.py  main_view.py  soundcloud_resolver.py
